--- a/public/css/frontend_css/main.css
+++ b/public/css/frontend_css/main.css
@@ -291,7 +291,11 @@ ul.sub-menu {
 	position: absolute;
 	top: 30px;
 	left: 0;
-	background: rgba(0, 0, 0, 0.6);
+  background-image: url('../../images/frontend_images/dropDwn_img/incense.jpg');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+	background-color: #c2e9fb;
+  background-blend-mode: multiply;
 	list-style: none;
 	padding: 0;
 	margin: 0;
