--- a/public/css/frontend_css/main.css
+++ b/public/css/frontend_css/main.css
@@ -306,7 +306,19 @@ ul.sub-menu {
 }
 
 .Antique {
-  background-image: url('../../images/frontend_images/dropDwn_img/incense.jpg');
+  background-image: url('../../images/frontend_images/dropDwn_img/antique.jpg');
+  background-repeat: no-repeat;
+  background-size: 100% 100%; 
+}
+
+.Beauty {
+  background-image: url('../../images/frontend_images/dropDwn_img/beauty.jpg');
+  background-repeat: no-repeat;
+  background-size: 100% 100%; 
+}
+
+.Prayer {
+  background-image: url('../../images/frontend_images/dropDwn_img/flag.jpg');
   background-repeat: no-repeat;
   background-size: 100% 100%; 
 }
@@ -326,7 +338,7 @@ ul.sub-menu {
 }
 
 .navbar-nav li ul.sub-menu li a{
-  color: #fff;
+  color: black;
 }
 
 .navbar-nav li ul.sub-menu li a:hover{
@@ -356,13 +368,16 @@ ul.sub-menu {
 **************************/
 
 #footer {
-  background: #F0F0E9;
+  background-image: linear-gradient(to right bottom, 
+                                    rgba(7, 162, 71, 0.7), 
+                                    rgba(5, 184, 94, 0.7)),
+                                    url(footer.jpg);
+
+  background-size: cover;  
+
 }
 
-
-.footer-top .container {
-  border-bottom: 1px solid #E0E0DA;
-  padding-bottom: 20px;
+ padding-bottom: 20px;
 }
 
 .companyinfo {
@@ -476,7 +491,7 @@ ul.sub-menu {
 }
 
 .footer-widget {
-  margin-bottom: 68px;
+  margin-bottom: 30px;
 }
 
 .footer-widget .container {
@@ -497,16 +512,24 @@ ul.sub-menu {
 	margin-right:15px;
 }
 
-.single-widget ul li a{
-	color: #8C8C88;
-	font-family: 'Roboto', sans-serif;
-	font-size: 14px;
-	font-weight: 300;
-	padding: 5px 0;
+.single-widget ul li a {
+  color: white;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  padding: 5px 0;
 }
 
 .single-widget ul li a i {
   margin-right: 18px;
+}
+
+.come-closer p{
+ color: white;
+ font-family: 'Roboto', sans-serif;
+ font-size: 14px;
+ font-weight: 500;
+ padding: 5px 0; 
 }
 
 .single-widget ul li a:hover{
@@ -557,6 +580,7 @@ ul.sub-menu {
 .footer-bottom {
   background: #D6D6D0;
   padding-top: 10px;
+  margin-bottom: -40px;
 }
 
 .footer-bottom p {
@@ -843,9 +867,8 @@ h2.title:before{
 	overflow:hidden;
 }
 
-
 h2.title {
-  color: #FE980F;
+  /*color: #FE980F;*/
   font-family: 'Roboto', sans-serif;
   font-size: 18px;
   font-weight: 700;
@@ -853,6 +876,9 @@ h2.title {
   text-transform: uppercase;
   margin-bottom: 30px;
   position: relative;
+  background: linear-gradient(#5643fa, #2998ff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .product-image-wrapper{
@@ -872,7 +898,9 @@ h2.title {
 }
 
 .productinfo h2{
-	color: #FE980F;
+	background: linear-gradient(#5643fa, #2998ff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 	font-family: 'Roboto', sans-serif;
 	font-size: 24px;
 	font-weight: 700;
@@ -927,10 +955,11 @@ h2.title {
 }
 
 .product-overlay .add-to-cart {
-  background:#fff;
+  background:linear-gradient(to right bottom, #5643fa, #2998ff );
   border: 0 none;
   border-radius: 0;
   color: #FE980F;
+  font-weight: 10px;
   font-family: 'Roboto', sans-serif;
   font-size: 15px;
   margin-bottom: 25px;
@@ -952,9 +981,9 @@ h2.title {
 
 
 .add-to-cart {
-  background:#F5F5ED;
+  background:#DDDDDD;
   border: 0 none;
-  border-radius: 0;
+  border-radius: 2px;
   color: #696763;
   font-family: 'Roboto', sans-serif;
   font-size: 15px;
@@ -962,7 +991,7 @@ h2.title {
 }
 
 .add-to-cart:hover {
-  background: #FE980F;
+  background:linear-gradient(to right bottom, #5643fa, #2998ff );
   border: 0 none;
   border-radius: 0;
   color: #FFFFFF;
@@ -976,10 +1005,7 @@ h2.title {
 	margin-right:5px;
 }
 
-.add-to-cart:hover {
-  background: #FE980F;
-  color: #FFFFFF;
-}
+
 
 .choose {
   border-top: 1px solid #F7F7F0;
@@ -1007,7 +1033,7 @@ h2.title {
 }
 
 .category-tab ul {
-  background: #40403E;
+  background: linear-gradient(to right bottom, #5643fa, #2998ff);
   border-bottom: 1px solid #FE980F;
   list-style: none outside none;
   margin: 0 0 30px;
@@ -1026,7 +1052,7 @@ h2.title {
 }
 
 .category-tab ul  li  a:hover{
-	background:#FE980F;
+	background: linear-gradient(to right bottom, #a73737, #7a2828);
 	color:#fff;
 }
 
@@ -1035,7 +1061,7 @@ h2.title {
   -moz-border-left-colors: none;
   -moz-border-right-colors: none;
   -moz-border-top-colors: none;
-  background-color: #FE980F;
+  background: linear-gradient(to right bottom, #ffb900, #ff7300);
   border:0px;
   color: #FFFFFF;
   cursor: default;
@@ -1549,7 +1575,7 @@ h2.title {
 }
 
 .breadcrumbs .breadcrumb li a {
-  background:#FE980F;
+  background:linear-gradient(to right bottom, #5643fa, #2998ff);
   color: #FFFFFF;
   padding: 3px 7px;
 }
@@ -1560,7 +1586,8 @@ h2.title {
   width: auto;
   border-width: 8px;
   border-style: solid;
-  border-color:transparent transparent transparent #FE980F;
+  border-color:transparent transparent transparent #2998ff;
+;
   position: absolute;
   top: 11px;
   left:48px;
@@ -1577,12 +1604,13 @@ h2.title {
 }
 
 
-#cart_items .cart_info .cart_menu {
-  background: #FE980F;
+.cart_menu{
+  background: linear-gradient(to right bottom, #5643fa, #2998ff);
   color: #fff;
   font-size: 16px;
   font-family: 'Roboto', sans-serif;
   font-weight: normal;
+  border-collapse: collapse;
 }
 
 #cart_items .cart_info .table.table-condensed thead tr {
@@ -1673,14 +1701,14 @@ h2.title {
 
 
 .cart_delete a {
-  background:#F0F0E9;
+  background:#DCDCDC;
   color: #FFFFFF;
   padding: 5px 7px;
   font-size: 16px
 }
 
 .cart_delete a:hover {
-  background:#FE980F
+  background:#2998ff;
 }
 
 
@@ -1785,7 +1813,7 @@ h2.title {
 }
 
 .update, .check_out {
-  background: #FE980F;
+  background: linear-gradient(to right bottom, #5643fa, #2998ff);
   border-radius: 0;
   color: #FFFFFF;
   margin-top: 18px;
@@ -1800,6 +1828,15 @@ h2.title {
   margin-left: 20px
 }
 
+.update:hover{
+  color: black;
+  font-weight: 20px;
+}
+
+.check_out:hover{
+  color: black;
+  font-weight: 20px;
+}
 
 
 /*************************
@@ -2547,12 +2584,33 @@ h2.title {
 .decrease-pins{
   margin-right: -3px;
   margin-top: -7px;
+  position: relative;
 }
 
+
+.form-control-one {
+position: absolute;
+    top: 164px;
+    left: 151px;
+    display: block;
+    width: 30%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.428571429;
+    color: #555;
+    vertical-align: middle;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+
+}
+
+
 .increase-pins{
-  float: right;
-  margin-top: -3.4rem;
-  margin-left: -1.4rem
+  margin-top: -5.7rem;
+  margin-left: 23.1rem;
 }
 
 .custom-cart{
@@ -2573,9 +2631,28 @@ h2.title {
 }
 
 .yes-thumbnails {
-  background-color: red;
+  background: linear-gradient(to right bottom, #5643fa, #2998ff);
 }
 
+
+.imgBox {
+  position: relative;
+}
+
+.imgBox :not(img){
+  position: absolute;
+  top: 30px;
+  color: white;
+  opacity: 0;
+  z-index: 1;
+  text-align: center;
+  width: 100%;
+  transition: .5s;
+}
+
+.imgBox:hover :not(img){
+  opacity: 1;
+}
 
 .col-sm-3 .imgBox{
   position: relative;
@@ -2585,14 +2662,12 @@ h2.title {
 .col-sm-3 .imgBox img{
   width: 100%;
   border-radius: 4px;
-  transition: transform 0.8s;
+  transition: .8s;
 
 }
 
 .col-sm-3 img:hover{
-  transform: scale(1.2);
+  filter: blur(2px) brightness(50%);
+  box-shadow: 0 0 32px cyan;
 }
 
-.col-sm-3 .details{
-  position: relative;
-}
