--- a/public/css/frontend_css/main.css
+++ b/public/css/frontend_css/main.css
@@ -2,10 +2,15 @@
 /*************************
 *******Typography******
 **************************/
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,300,400italic,500,700,100);
+
+/*https://fonts.googleapis.com/css?family=Bree+Serif:400,300,500,700*/
+@import url(https://fonts.googleapis.com/css?family=Bree+Serif:400,300,500,700);
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,800,300,600,700);
 @import url(http://fonts.googleapis.com/css?family=Abel);
 @import url(https://fonts.googleapis.com/css?family=Mukta:400,300,500,700);
+
+/* for fonts inside the slider section */
+@import url(https://fonts.googleapis.com/css?family=Dancing+Script:400,300,500,700);
 
 body {
   font-family: 'Mukta', sans-serif;
@@ -72,14 +77,14 @@ a#scrollUp i{
   background: linear-gradient(to right bottom, #7ed56f, #55c57a) repeat scroll 0 0 #F0F0E9;
 }
 
-.contactinfo ul li:first-child{
+/*.contactinfo ul li:first-child{
     margin-left: -15px;
-}
+}*/
 
 .contactinfo ul li a{
-  font-size: 12px;
+  font-size: 15.8px;
   color: #696763;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
 }
 
 
@@ -143,6 +148,7 @@ a#scrollUp i{
   margin-right: 0;
   padding-bottom: 20px;
   padding-top: 20px;
+  position: relative;
 }
 
 .header-middle .container .row .col-sm-4{
@@ -292,10 +298,13 @@ a#scrollUp i{
   animation: fadeInUp 400ms;
 }
 
+
+
+
 ul.sub-menu {
 	position: absolute;
-
-
+  /*left: 0px;*/
+  top:31px;
 	list-style: none;
 	padding: 0;
 	margin: 0;
@@ -305,34 +314,98 @@ ul.sub-menu {
 	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.1);
 	display: none;
 	z-index: 999;
+  background-color: #cccccc; /* Used if the image is unavailable */
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover;   
 }
 
 /* Background of Sub-Menu */
 
 .Incense {
-  background-image: url('../../images/frontend_images/dropDwn_img/antique.jpg');  
+  background-image: linear-gradient(to right bottom, 
+                                    rgba(198, 47, 222, 0.4),
+                                    rgba(229, 152, 36, 0.4),
+                                    rgba(240,216,240, 0.3)),
+                                    url('../../images/frontend_images/dropDwn_img/incense.jpg');    
+  left: 0px;
 }
 
 .Pashmina {
- 
+  background-image: linear-gradient(to right bottom, 
+                                    rgba(135, 168, 246, 0.7),
+                                    rgba(240,216,240, 0.3)),
+                                    url('../../images/frontend_images/dropDwn_img/pashmina.jpg');  
+  left: -108.2px;
+}
+
+
+.Mallet {
+  background-image: linear-gradient(to right bottom, 
+                                    rgba(31, 76, 182, 0.7),
+                                    rgba(209, 173, 28, 0.5)),
+                                    url('../../images/frontend_images/dropDwn_img/mallet.jpg');    
+  left: -233.01px;
+}
+
+.Gongs {
+  background-image: linear-gradient(to right bottom, 
+                                    rgba(242,238,242, 0.7),
+                                    rgba(240,216,240, 0.3)),
+                                    url('../../images/frontend_images/dropDwn_img/ramlal.jpg');   
+
+  left: -328.78px;
 }
 
 .Antique {
+  background-image: linear-gradient(to right bottom, 
+                                    rgba(244, 198, 44, 0.5),
+                                    rgba(229, 152, 36, 0.4),
+                                    rgba(209, 173, 28, 0.5)),
+                                    url('../../images/frontend_images/dropDwn_img/antique.jpg');
+
+  left: -427.37px;
+}
+
+.Statues {
+  background-image: linear-gradient(to right bottom, red, #f06d06, rgb(255, 255, 0), green),
+
+                                    url('../../images/frontend_images/dropDwn_img/antique.jpg');
+  left: -647.2px;
+}
+
+.Candles {
   background-image: url('../../images/frontend_images/dropDwn_img/antique.jpg');
-  background-repeat: no-repeat;
-  background-size: 100% 100%; 
+  left: 0px;
+}
+
+.Book {
+  background-image: url('../../images/frontend_images/dropDwn_img/antique.jpg');
+  left: -110.2px;
+}
+
+.Malas {
+  left: -230.47px;
+}
+
+.Prayer{
+  background-image: linear-gradient(to right bottom, 
+                                    rgba(31, 76, 182, 0.5),
+                                    rgba(254, 185, 66, 0.5),
+                                    rgba(82, 176, 42, 0.6)),
+                                    url('../../images/frontend_images/dropDwn_img/flag.jpg');  
+  left: -371.91px;  
 }
 
 .Beauty {
   background-image: url('../../images/frontend_images/dropDwn_img/beauty.jpg');
-  background-repeat: no-repeat;
-  background-size: 100% 100%; 
+  /*background-repeat: no-repeat;*/
+  /*background-size: 100% 100%; */
+  left: -469.3px;
 }
 
-.Prayer {
-  background-image: url('../../images/frontend_images/dropDwn_img/flag.jpg');
-  background-repeat: no-repeat;
-  background-size: 100% 100%; 
+.Harmonic {
+  left: -570.57px;
 }
 
 .dropdown ul.sub-menu li .active{
@@ -355,6 +428,7 @@ ul.sub-menu {
 
 .navbar-nav li ul.sub-menu li a:hover{
     color: #FDB45E;
+
 }
 
 .fa-angle-down{
@@ -663,12 +737,13 @@ ul.sub-menu {
   margin-top: 10px;
 }
 
-.item  p {
-	color:#363432;
-	font-size:16px;
-	font-weight:300;
-	font-family: 'Roboto', sans-serif;
+.item p {
+  color: #363432;
+  font-size: 22px;
+  font-weight: 300;
+  font-family: 'Dancing Script', sans-serif;  
 }
+
 
 .get {
   background: linear-gradient(to right bottom, #7ed56f, #55c57a);
@@ -1917,6 +1992,11 @@ h2.title {
   padding: 0
 }
 
+.nav li a {
+  position: relative;
+  display: block;
+  padding: 10px 15px;
+}
 .checkout-options .nav li a:hover {
   background: inherit;
 }
@@ -2706,4 +2786,5 @@ position: absolute;
   top: 0;
   left: 6.8rem;
 }
+
 
