--- a/public/css/frontend_css/main.css
+++ b/public/css/frontend_css/main.css
@@ -191,7 +191,7 @@ a#scrollUp i{
 .dropdown-menu  li  a:hover, .dropdown-menu  li  a:focus {
   background-color: #FE980F;
   color: #FFFFFF;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   text-decoration: none;
 }
 
@@ -210,7 +210,7 @@ a#scrollUp i{
 .shop-menu ul li a {
   background: #FFFFFF;
   color: #696763;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   font-size: 14px;
   font-weight: 300;
   padding:0;
@@ -271,7 +271,7 @@ a#scrollUp i{
   background: rgb(240, 167, 22);
   border: medium none;
   color: #000000;
-  font-family: 'roboto';
+  font-family: 'Bree Serif';
   border-radius: 15px;
   font-size: 15px;
   font-weight: 700;
@@ -357,7 +357,7 @@ ul.sub-menu {
 }
 
 .Gongs {
-  background-image: url('../../images/frontend_images/dropDwn_img/ramlal.jpg');   
+  background-image: url('../../images/frontend_images/dropDwn_img/gong.jpg');   
 
   left: -328.78px;
 }
@@ -462,8 +462,8 @@ ul.sub-menu {
 
 #footer {
   background-image: linear-gradient(to right bottom, 
-                                    rgba(218,165,32, 0.7),
-                                    rgba(255,165,0, 0.7)),
+                                    rgba(218,165,32, 0.8),
+                                    rgba(255,165,0, 0.8)),
                                     url(footer.jpg);
 
   background-size: cover;  
@@ -490,7 +490,7 @@ ul.sub-menu {
 
 .companyinfo p {
   color: #B3B3AD;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   font-size: 12px;
   font-weight: 300;
 }
@@ -548,7 +548,7 @@ ul.sub-menu {
 
 .video-gallery p {
   color: #8C8C88;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   font-size: 12px;
   font-weight: 500;
   margin-bottom:0px;
@@ -556,7 +556,7 @@ ul.sub-menu {
 
 .video-gallery  h2 {
   color: #8c8c88;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   font-size: 12px;
   font-weight: 300;
   text-transform:uppercase;
@@ -575,7 +575,7 @@ ul.sub-menu {
 
 .address p {
   color: #666663;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   font-size: 14px;
   font-weight: 300;
   left: 25px;
@@ -593,7 +593,6 @@ ul.sub-menu {
 }
 
 .single-widget h2 {
-  color: #666663;
   font-family: 'Rakkas', sans-serif;
   font-size: 16px;
   font-weight: 500;
@@ -606,7 +605,7 @@ ul.sub-menu {
 }
 
 .single-widget ul li a {
-  color: white;
+  color: #666666;
   font-family: 'Rakkas', sans-serif;
   font-size: 15px;
   font-weight: 500;
@@ -618,7 +617,7 @@ ul.sub-menu {
 }
 
 .come-closer p{
- color: white;
+ color: #666666;
  font-family: 'Rakkas', sans-serif;
  font-size: 14px;
  font-weight: 500;
@@ -634,7 +633,7 @@ ul.sub-menu {
 .searchform input {
   border: 1px solid #DDDDDD;
   color: #CCCCC6;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   font-size: 19px;
   margin-top: 0;
   outline: medium none;
@@ -696,7 +695,7 @@ ul.sub-menu {
 
 
 #slider {
-  padding-bottom: 45px;
+  padding-bottom: 15px;
 }
 
 .carousel-indicators li {
@@ -726,7 +725,7 @@ ul.sub-menu {
   color: #B4B1AB;
   font-family: abel;
   font-size: 48px;
-  margin-top: 115px;
+  margin-top: 15px;
 }
 
 .item h1 span {
@@ -737,7 +736,7 @@ ul.sub-menu {
 
 .item h2 {
   color: #363432;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   font-size: 28px;
   font-weight: 700;
   margin-bottom: 22px;
@@ -757,7 +756,7 @@ ul.sub-menu {
   border: 0 none;
   border-radius: 10px;
   color: #FFFFFF;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   font-size: 16px;
   font-weight: 300;
   margin-top: 23px;
@@ -795,7 +794,7 @@ ul.sub-menu {
 }
 .left-sidebar h2, .brands_products h2 {
   color: #FE980F;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   font-size: 18px;
   font-weight: 700;
   margin: 0 auto 30px;
@@ -857,7 +856,7 @@ h2.title:before{
 
 .category-products .panel-default .panel-heading .panel-title a {
   color: #696763;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   font-size: 14px;
   text-decoration: none;
   text-transform: uppercase;
@@ -889,7 +888,7 @@ h2.title:before{
 
 .panel-body ul li a {
   color: #696763;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   font-size: 12px;
   text-transform: uppercase;
 }
@@ -904,7 +903,7 @@ h2.title:before{
 .brands-name .nav-stacked li a {
   background-color: #FFFFFF;
   color: #696763;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   font-size: 14px;
   padding: 5px 25px;
   text-decoration: none;
@@ -1001,20 +1000,20 @@ h2.title {
 	background: linear-gradient(#5643fa, #2998ff);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Bree Serif', sans-serif;
 	font-size: 24px;
 	font-weight: 700;
 }
 .product-overlay h2{
 	color: #fff;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Bree Serif', sans-serif;
 	font-size: 24px;
 	font-weight: 700;
 }
 
 
 .productinfo p{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   font-size: 14px;
   font-weight: 400;
   color: #696763;
@@ -1060,7 +1059,7 @@ h2.title {
   border-radius: 0;
   color: #FE980F;
   font-weight: 10px;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   font-size: 15px;
   margin-bottom: 25px;
   transition: .4s;
@@ -1073,7 +1072,7 @@ h2.title {
 
 
 .product-overlay p{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   font-size: 14px;
   font-weight: 400;
   color: #fff;
@@ -1086,7 +1085,7 @@ h2.title {
   border: 0 none;
   border-radius: 7px;
   color: #696763;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   font-size: 15px;
   margin-top: 30px;
 }
@@ -1114,7 +1113,7 @@ h2.title {
 
 .choose ul li a {
   color: #B3AFA8;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   font-size: 13px;
   padding-left: 0;
   padding-right: 0;
@@ -1318,7 +1317,7 @@ h2.title {
   background: #FE980F;
   bottom: 0;
   color: #FFFFFF;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   font-size: 14px;
   font-weight: 700;
   margin-bottom: 0;
@@ -1372,14 +1371,14 @@ h2.title {
 
 .product-information h2 {
   color: #363432;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   font-size: 20px;
   margin-top: 0;
 }
 
 .product-information p {
   color: #696763;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   margin-bottom: 5px;
 }
 
@@ -1392,7 +1391,7 @@ h2.title {
 .product-information span span {
   color: #FE980F;
   float: left;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   font-size: 30px;
   font-weight: 700;
   margin-right: 20px;
@@ -1401,7 +1400,7 @@ h2.title {
 .product-information span input {
   border: 1px solid #DEDEDC;
   color: #696763;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   font-size: 20px;
   font-weight: 700;
   height: 33px;
@@ -1412,7 +1411,7 @@ h2.title {
 
 .product-information span label {
   color: #696763;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   font-weight: 700;
   margin-right: 5px;
 }
@@ -1427,7 +1426,7 @@ h2.title {
   border: 0 none;
   border-radius: 0;
   color: #FFFFFF;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   font-size: 15px;
   margin-bottom: 10px;
   margin-left: 20px;
@@ -1465,7 +1464,7 @@ h2.title {
 #reviews ul li a {
   color: #696763;
   display: block;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   font-size: 14px;
   padding-right: 15px;
 }
@@ -1492,7 +1491,7 @@ h2.title {
   background:#F0F0E9;
   border: 0 none;
   color: #A6A6A1;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   font-size: 14px;
   outline: medium none;
   padding: 8px;
@@ -1521,7 +1520,7 @@ h2.title {
   border: 0 none;
   border-radius: 0;
   color: #FFFFFF;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   font-size: 14px;
 }
 
@@ -1536,7 +1535,7 @@ h2.title {
 
 .content-404 h1 {
   color: #363432;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   font-size: 41px;
   font-weight: 300;
 }
@@ -1547,7 +1546,7 @@ h2.title {
 
 .content-404 p {
   color: #363432;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   font-size: 18px;
 }
 
@@ -1556,9 +1555,10 @@ h2.title {
 }
 
 .content-404 h2 a {
-  background: #FE980F;
+  background: rgb(240, 105, 22);  
   color: #FFFFFF;
-  font-family: 'Roboto', sans-serif;
+  border-radius: 45px;
+  font-family: 'Bree Serif', sans-serif;
   font-size: 44px;
   font-weight: 300;
   padding: 8px 40px;
@@ -1586,7 +1586,7 @@ h2.title {
 
 .login-form h2, .signup-form h2 {
   color: #696763;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   font-size: 20px;
   font-weight: 300;
   margin-bottom: 30px;
@@ -1598,7 +1598,7 @@ h2.title {
   border: medium none;
   color: #696763;
   display: block;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   font-size: 14px;
   font-weight: 300;
   height: 40px;
@@ -1629,7 +1629,7 @@ h2.title {
   border-radius: 15px;
   color: #FFFFFF;
   display: block;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   padding: 6px 25px;
 }
 
@@ -1652,7 +1652,7 @@ h2.title {
 	background: linear-gradient(to right bottom, #2998ff,  #5643fa);
 	border-radius: 40px;
 	color: #FFFFFF;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Bree Serif', sans-serif;
 	font-size: 16px;
 	height: 50px;
 	line-height: 50px;
@@ -1706,6 +1706,7 @@ h2.title {
 
 #cart_items .cart_info {
   border: 1px solid #E6E4DF;
+  border-radius: 2rem;
   margin-bottom: 50px
 }
 
@@ -1714,7 +1715,7 @@ h2.title {
   background: linear-gradient(to right bottom, #5643fa, #2998ff);
   color: #fff;
   font-size: 16px;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   font-weight: normal;
   border-collapse: collapse;
 }
@@ -1749,7 +1750,7 @@ h2.title {
 
 #cart_items .cart_info .cart_description h4 a {
   color: #363432;
-  font-family: 'Roboto',sans-serif;
+  font-family: 'Bree Serif',sans-serif;
   font-size: 20px;
   font-weight: normal;
 
@@ -1779,12 +1780,12 @@ h2.title {
 
 .cart_product {
   display: block;
-  margin: 15px -70px 10px 25px;
+  margin: 15px -100px 10px 1px;
 }
 
 .cart_quantity_button a {
   background: linear-gradient(to right bottom, #ffb900, #ff7300);
-
+  border-radius: 3.5px;
   color: #000000;
   display: inline-block;
   font-size: 16px;
@@ -1800,9 +1801,10 @@ h2.title {
 .cart_quantity_input {
   color: #696763;
   /*float: left;*/
-  font-size: 16px;
+/*  border: 0.2px solid black;
+*/  font-size: 16px;
   text-align: center;
-  font-family: 'Roboto',sans-serif;
+  font-family: 'Bree Serif',sans-serif;
   
 }
 
@@ -1835,7 +1837,7 @@ h2.title {
 .heading h3 {
   color: #363432;
   font-size: 20px;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
 }
 
 .heading p {
@@ -1863,6 +1865,7 @@ h2.title {
 .total_area ul li {
   background:#E6E4DF;
   color: #696763;
+  border-radius: 15px;
   margin-top: 10px;
   padding: 7px 20px;
 }
@@ -1928,7 +1931,7 @@ h2.title {
 
 .update, .check_out {
   background: linear-gradient(to right bottom, #5643fa, #2998ff);
-  border-radius: 0;
+  border-radius: 10px;
   color: #FFFFFF;
   margin-top: 18px;
   border: none;
@@ -1967,7 +1970,7 @@ h2.title {
   font-size: 20px;
   margin-bottom: 35px;
   padding: 10px 25px;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
 }
 
 .checkout-options {
@@ -1980,7 +1983,7 @@ h2.title {
   font-size: 20px;
   margin-bottom: 0;
   font-weight: normal;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
 }
 
 .checkout-options p {
@@ -1994,7 +1997,7 @@ h2.title {
   margin-right: 45px;
   color: #696763;
   font-size: 18px;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   font-weight: normal;
 }
 
@@ -2098,7 +2101,7 @@ h2.title {
 .order-message label {
   font-weight:300;
   color: #696763;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   margin-left: 10px;
   font-size: 14px
 }
@@ -2162,7 +2165,7 @@ h2.title {
 .single-blog-post h3 {
   color: #696763;
   font-size: 16px;
-  font-family: 'Roboto',sans-serif;
+  font-family: 'Bree Serif',sans-serif;
   text-transform: uppercase;
   font-weight: 500;
   margin-bottom: 17px;
@@ -2391,7 +2394,7 @@ h2.title {
   color: #363432;
   font-size: 14px;
   font-weight: 700;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Bree Serif', sans-serif;
   margin-bottom: 15px
 }
 
@@ -2870,3 +2873,13 @@ position: absolute;
     background-repeat: no-repeat;
 }
 
+.table {
+  border-collapse: collapse;
+  border-radius: 2rem;
+  overflow: hidden;
+}
+
+.col-sm-6 img {
+  max-width: 100%;
+  max-height: 100%;
+}
