--- a/public/css/frontend_css/responsive.css
+++ b/public/css/frontend_css/responsive.css
@@ -163,7 +163,7 @@
 }
 
 .mainmenu ul li{
-	background: rgba(0, 0, 0, 0.5);
+	background: rgba(0, 0, 0, 0);
     padding-top: 15px;
 	padding-bottom: 0;
 }
@@ -350,7 +350,7 @@ ul.sub-menu{
 }
 
 .mainmenu ul li{
-	background: rgba(0, 0, 0, 0.5);
+  background: linear-gradient(to right bottom, #f8b500, #fceabb);
     padding-top: 15px;
 	padding-bottom: 0;
 }
